# py-common-lib

./: .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  claude.yml  copilot-auto-fix.yml  late-review-scanner.yml
docs/: overview.md
docs/specs/infrastructure/: constrained-client.md  secret-store.md  session-rotating-file-handler.md
src/py_common_lib/: __init__.py
src/py_common_lib/core/: __init__.py  budget_tracker.py  circuit_breaker.py
src/py_common_lib/httpx/: __init__.py  constrained_client.py
src/py_common_lib/logging/: __init__.py  session_rotating_file_handler.py
src/py_common_lib/secrets/: __init__.py  errors.py  store.py
tests/: test_package.py  test_safety.py  test_secret_store.py  test_session_rotating_file_handler.py
tests/property/: test_invariants.py
