[project]
name = "py-common-lib"
version = "0.1.0"
description = "Shared Python library — constrained HTTP client with budget, circuit breaker, and rate limiting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_common_lib"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=5.0",
    "ruff>=0.14.14",
]
